# longterm-agu

./: .env.example  .gitignore  README.md  auto-update.sh  pyproject.toml  update-data.sh
.claude/skills/calendar-manager/: SKILL.md
.claude/skills/investment-analysis/: SKILL.md
.claude/skills/investment-analysis/scripts/: check-data.sh  (+1 more)
.github/workflows/: daily-tasks.yml  deploy-data.yml  news_read_daily.yml  price-grep-daily.yml
data/: calendar.csv  news_breakfast.csv  precious_metal_gold.csv  precious_metal_silver.csv  stock_index_chinext.csv  stock_index_csi300.csv  stock_index_hsi.csv  stock_index_nasdaq.csv  stock_index_sp500.csv  stock_index_sse_composite.csv
docs/plans/: 2026-02-24-calendar-boundary-redesign.md
docs/reports/: 2026-02-23-daily.md
news-read/: README.md  pyproject.toml
news-read/docs/: ARCHITECTURE.md
news-read/src/: __init__.py  fetcher.py  main.py  storage.py
news-read/src/news_read/: __init__.py  akshare_client.py  cli.py  config.py  firecrawl_client.py  llm_client.py  pipeline.py  storage.py
price-grep/: README.md  pyproject.toml
price-grep/data/: precious_metal_gold.csv  precious_metal_silver.csv  stock_index_chinext.csv  stock_index_csi300.csv  stock_index_hsi.csv  stock_index_nasdaq.csv  stock_index_sp500.csv  stock_index_sse_composite.csv
price-grep/src/: __init__.py  fetcher.py  main.py  storage.py
reports/: 2026-03-09.md  2026-03-10.md  2026-03-12.md
src/calendar_tool/: main.py  storage.py
src/news_read/: __init__.py  fetcher.py  main.py  storage.py
src/price_grep/: __init__.py  fetcher.py  main.py  storage.py
(+9 files in other folders)
