[project]
name = "longterm-agu"
version = "0.1.0"
description = "金融数据工具集合 - 价格获取和财经新闻采集"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.2.0",
    "firecrawl>=0.3.0",
    "openai>=1.68.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
price-grep = "price_grep.main:main"
news-read = "news_read.main:main"
calendar-tool = "calendar_tool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/price_grep", "src/news_read", "src/calendar_tool"]
