[project]
name = "price-grep"
version = "0.1.0"
description = "金融数据获取工具 - 支持股指和贵金属历史数据获取与每日更新"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["akshare>=1.10.0", "pandas>=2.0.0"]

[project.scripts]
price-grep = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
